src/component/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&family=Zen+Old+Mincho:wght@400;700;900&display=swap');


:root{--dark:#000000;
  --accent: #ce9243;
  --light:whitesmoke;
}


/* ------------------------------common elements------------------------- */



::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}


body
{
    scrollbar-width: none !important;
  letter-spacing: 1.5px;
  background-color:var(--dark) !important; 
  color:var(--light) !important; 
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  
  padding:0 5rem;
  box-sizing: border-box !important;
}

p
{
  /* color:rgb(92, 92, 92);  */
  /* font-family: 'Exo-2', sans-serif !important; */
  font-size: 1.5rem;
}

a
{
  color:rgba(95, 72, 72, 0.882) !important;
  text-decoration: none;
}

/* Every button is customised here, padding and all are as bootstrap classes */

a>button
{ 
  font-size:1.2rem;
  border:2px solid var(--accent) !important; 
  color:var(--accent);
  background-color: var(--dark) !important;
  transition: all 0.1s !important;
  border-radius: 25px !important;
 }

button:hover
{
  font-size: 1.3rem !important;
}


.about, .portfolio, .contact
{
    padding:2rem;
    margin-top:12rem;
    opacity:0;

}


/*----------------------------- Header Component-----------------------*/

header
{
   height:75px;
   width:100%;
   padding:1rem;
   background-color:var(--dark);
   display: flex;
   flex-flow: row !important;
   justify-content: space-between;
}

.logo
{ 
    align-self: flex-start;
}

.logo>a>h3
{  
  color:whitesmoke;
  padding:2px;
  border:3px solid whitesmoke; 
}

.logo>span
{
    font-size:0.9rem;
}

.nav-menu
{
  gap:3rem;
  display: flex;
  flex-flow: row;
  justify-content: space-around;
}



.nav-menu>a>button
{
    border:none !important;
    height:50px; 
    text-transform:lowercase; 
    text-align:right; 
    color:whitesmoke !important; 
    font-weight:900; 
}

.nav-menu>a>button>h1
{
    font-size: 3rem;
    transition: all 0.2s;
}
.nav-menu>a>button>h1:hover
{
    font-size:3.3rem !important;
}

.active-button>button>h1
{
    font-size:3.3rem !important; 
    text-decoration:4px underline;
    text-decoration-color: var(--accent); 
}


/*----------------------------- Landing-page Component-----------------------*/

.landing-page
{
    opacity:0;
    margin-top:9rem;
    padding:0 2rem;
}


.title-span
{
    color:var(--light); 
    text-transform: capitalize;
}


.landing-div
{
    width:100%;
    padding:0 2rem;
    margin:auto auto;
    text-align: center;
    /* margin-top:5rem; */
}



.landing-buttons
{
    margin:auto auto;
    width:30%;
}

.landing-name-div
{
    margin: auto auto;
    text-align: center;
}


.hello

{
    font-weight: 900;
    font-size:15rem !important;
    -webkit-text-stroke:1px var(--accent);
    color:rgb(0, 0, 0) !important;

}

.landing-title
{
    font-size:3rem;
    font-weight: 900;
    
}

.landing-title-span
{
    color:var(--accent);
}

.landing-about
{
    font-size: 1.1rem;
    color: rgb(167, 167, 167);
    letter-spacing: 5px;
}


/*----------------------------- About Component-----------------------*/


.section-title>h1
{
    font-size: 3rem;
    padding-left:1rem;
    margin-bottom:3rem;
    border-left: 1px solid var(--accent);
}

.col-one
{
    width:100%;
}

.col-two
{
    margin-top: 6rem;
    width: 100%;
}

.about-me
{
    display:flex;
    flex-flow:row;
    gap:8rem;
}

.about-me>img
{
    
    border:2px solid var(--accent);
    border-radius: 50%;
    height:10%;
    width:15%;
}
.about-flex-div
{
    display: flex;
    flex-flow:row !important;
    justify-content: space-between;
    flex-wrap: wrap;
}

.about-card-div
{
    width:50%;
   text-align: left !important;
}

.details
{
    margin-top: 0rem;
    line-height: 2.5rem;
    width:60%;
    font-size:1.2rem !important;
}

.email, .social
{
    font-size: 1rem;
}


.rajeev
{
    color:var(--accent);
}

.about-cards-body
{
    padding:2rem;
}

.about-card
{
    text-align: center;
    width:43%;
    height:auto !important;
    color:whitesmoke;
}

.cards-title
{
    color:whitesmoke !important;
}

.about-para
{

    font-size:1rem !important;
}

.card-lists>h5
{
    font-size: 0.8rem !important;
}

.sub-title
{
    color: var(--accent);
    font-size: 1.1rem !important;
}

.cards-text
{
  font-size:1rem; 
  font-weight: bold; 
  color:rgb(105, 105, 105);
} 

.progress-div
{
    
    width:50%;
}

.progress-inner-div
{
    margin-top: 10rem;
}

              .lang{font-size:0.8rem; width:10.7rem;margin-right: 1rem; text-align: right;}
              .skill-name
              {display:flex;
                flex-flow:row;margin-bottom: 30px;}

              .progress
              {background-color:rgb(202, 202, 202); height:0.3rem; width:100% !important;}

              .progress-bar
              {background-color:var(--accent);}

              .bar1{width:80%;}
              .bar2{width:75%;}
              .bar3{width:60%;}
              .bar4{width:30%;}

              .fa-html5{color:#e34c26;}
              .fa-css3{color:#264de4;}
              .fa-js{color:#f0db4f;}
              .fa-react{color:#7cc5d9;}


#cta-div
{
    margin-top:10rem;
    width:100%;
    text-align: center !important;
}

#cta-div>p
{
    font-size: 1.5rem;
    color: var(--accent);
}

#cta-div>h1>a
{
    font-size: 4rem;
    color: var(--light) !important;
}



/*----------------------------- portfolio Component-----------------------*/



.project-card
{   
    border:1px solid rgb(36, 36, 36);
    background-color:black;
    height:auto !important;
    text-align: center;
    width:100%;
}

.project-card-body
{
    display:flex;
    flex-flow:row;

}

.project-img-div
{
    margin:auto auto;
    width:70%
}

.project-img-div>img
{
    width:100%;
}

.project-details
{
    /* padding:5rem; */
    width:20%;
}

.project-details>p
{  margin: auto auto;
    font-size:1rem;
    text-align: left;
    color:grey;
    /* width:30%; */
}

.project-details>a>button
{
    margin-bottom:2rem;
}


/*----------------------------- contact Component-----------------------*/


.contact-inner-div
{
    margin:auto auto;
    
    width:70%;
}
.query-section
{
    margin:auto auto;
    text-align: center;
}




input, textarea 
{
    background-color: black !important;
    color:whitesmoke !important;
}

.query-section>h3>i
{
    color:var(--accent) !important;
}

.query-section>p
{
    font-size:0.8rem;
    letter-spacing: 0.5rem;
}

